--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="headerGlobal mdl-layout__header">
-  <button class="mdl-layout__drawer-button">
+  <button class="mdl-layout__drawer-button" (click)="toggleMenu()">
     <span class="material-icons"></span>
   </button>
 
@@ -25,7 +25,7 @@
     <!--./Search-->
   </div>
 </header>
-<section class="headerGlobal__menuArea mdl-layout__drawer">
+<section class="headerGlobal__menuArea mdl-layout__drawer" [ngClass]="{'headerGlobal__menuArea--active': isMenuOpen }">
   <span class="mdl-layout-title">
     <img class="headerGlobal__logo" src="assets/img/logo.svg" alt="CMail">
   </span>
@@ -54,4 +54,4 @@
     </a>
   </nav>
 </section>
-<div class="headerGlobal__menuOverlay"></div>
+<div class="headerGlobal__menuOverlay" (click)="toggleMenu()"></div>
