--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -40,13 +40,13 @@
   </header>
 
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link">
+    <a class="mdl-navigation__link" routerLink="/login" routerLinkActive="mdl-navigation__link--current">
       <span class="material-icons">person</span> Login
     </a>
-    <a class="mdl-navigation__link">
+    <a class="mdl-navigation__link" routerLink="/cadastro" routerLinkActive="mdl-navigation__link--current">
       <span class="material-icons">create</span> Cadastro
     </a>
-    <a class="mdl-navigation__link">
+    <a class="mdl-navigation__link" routerLink="/inbox" routerLinkActive="mdl-navigation__link--current">
       <span class="material-icons">inbox</span> Caixa de Entrada
     </a>
     <a class="mdl-navigation__link">
