--- a/src/app/components/modules/cadastro/cadastro.component.html
+++ b/src/app/components/modules/cadastro/cadastro.component.html
@@ -20,10 +20,17 @@
             <span class="mdl-textfield__error" *ngIf="formCadastro.get('senha').getError('required')">Informar um password obrigatório!</span>
             <span class="mdl-textfield__error" *ngIf="formCadastro.get('senha').getError('pattern')">A senha deve ser maior que 8 e deve conter caracteres especiais, minusculos, maiusculos e numeros!</span>
           </cmail-form-group>
+          <cmail-form-group [campo]="formCadastro.get('telefone')">
+            <input formControlName="telefone" required type="text" name="telefone" cmailFormField>
+            <span class="mdl-textfield__error" *ngIf="formCadastro.get('telefone').getError('required')">Informar um telefome obrigatório!</span>
+            <span class="mdl-textfield__error" *ngIf="formCadastro.get('telefone').getError('pattern')">Informe um telefome válido</span>
+          </cmail-form-group>
           <cmail-form-group [campo]="formCadastro.get('avatar')" >
             <input formControlName="avatar" type="text" name="avatar" cmailFormField>
             <span class="mdl-textfield__error" *ngIf="formCadastro.get('avatar').getError('required')">Informar um avatar obrigatório!</span>
-            <span class="mdl-textfield__error" *ngIf="formCadastro.get('avatar').getError('pattern')">URL deve ser válida!</span>
+            <span class="mdl-textfield__error" *ngIf="formCadastro.get('avatar').hasError('urlInvalid')">URL inválida</span>
+            <span class="mdl-textfield__error mdl-textfield__checking" *ngIf="formCadastro.get('avatar').status === 'PENDING'">Validação pendente...</span>
+            <span class="mdl-textfield__error mdl-textfield__valid" *ngIf="formCadastro.get('avatar').status === 'VALID'">URL válida</span>
           </cmail-form-group>
 
           <div class="mdl-card__actions">
