--- a/src/app/components/modules/login/login.component.html
+++ b/src/app/components/modules/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<div class="mdl-layout mdl-js-layout">
+  <main class="mdl-layout__content">
+    <div class="page-content">
+      <div class="mdl-grid">
+        <article class="demo-card-wide mdl-card mdl-shadow--2dp">
+          <header class="mdl-card__title">
+            <h1 class="mdl-card__title-text">Bem vindos/as ao CMail!</h1>
+          </header>
+
+          <form autocomplete="off" class="mdl-card__supporting-text" (ngSubmit)="handleLogin(formLogin)" #formLogin="ngForm">
+            <!-- aqui os campos do formulário -->
+            <cmail-form-group [campo]="email">
+              <input #email="ngModel" [(ngModel)]="login.email" autofocus required type="email" name="email" cmailFormField>
+              <span class="mdl-textfield__error" *ngIf="email.invalid">Informar um e-mail é obrigatório!</span>
+            </cmail-form-group>
+            <cmail-form-group [campo]="password">
+              <input #password="ngModel" [(ngModel)]="login.password" autofocus required type="password" name="password" cmailFormField>
+              <span class="mdl-textfield__error" *ngIf="password.invalid">Informar uma senha é obrigatório!</span>
+            </cmail-form-group>
+            <div class="mdl-card__actions mdl-card--border">
+              <a routerLink="/cadastro" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                Primeiro login? Cadastre-se!
+              </a>
+              <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent entrar">
+                Entrar
+              </button>
+            </div>
+          </form>
+          <section *ngIf="mensagemErro" class="mdl-textfield is-invalid">
+            <p class="mdl-textfield__error">
+              {{mensagemErro}}
+            </p>
+          </section>
+
+        </article>
+      </div>
+    </div>
+  </main>
+</div>
