Implemented delete email.

--- a/src/app/components/emails-list/emails-list.component.html
+++ b/src/app/components/emails-list/emails-list.component.html
@@ -1,25 +1,25 @@
 <!-- Email Item -->
-<li class="emailList__item mdl-list__item mdl-list__item--three-line" tabindex="0" *ngFor="let email of list">
-  <span class="mdl-list__item-primary-content">
-    <a class="emailList__itemLink">
-      <i class="material-icons mdl-list__item-avatar">person</i>
-      <span>{{email.from}}</span>
-      <span class="emailList__itemText mdl-list__item-text-body">
-        {{ email.content }}
-      </span>
-    </a>
-  </span>
-  <span class="mdl-list__item-secondary-content">
-    <a class="emailList__itemLink" tabindex="-1">
-      <span class="emailList__itemDate">
-        {{ email.created_at | date: 'dd/MM/yyyy'}}
-      </span>
-    </a>
-  </span>
+  <div class="emailList__item mdl-list__item mdl-list__item--three-line" tabindex="0" *ngFor="let email of list" [routerLink]="['/inbox/' + email.id]" routerLinkActive="router-link-active" >
+    <span class="mdl-list__item-primary-content">
+      <a class="emailList__itemLink">
+        <i class="material-icons mdl-list__item-avatar">person</i>
+        <span>{{email.from}}</span>
+        <span class="emailList__itemText mdl-list__item-text-body">
+          {{ email.content }}
+        </span>
+      </a>
+    </span>
+    <span class="mdl-list__item-secondary-content">
+      <a class="emailList__itemLink" tabindex="-1">
+        <span class="emailList__itemDate">
+          {{ email.created_at | date: 'dd/MM/yyyy'}}
+        </span>
+      </a>
+    </span>
 
-  <span class="emailList__itemMenu">
-    <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
-      <i class="material-icons">delete</i>
-    </button>
-  </span>
-</li><!-- ./Email Item -->
+    <span class="emailList__itemMenu">
+      <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored" (click)="removeEmail(email.id)">
+        <i class="material-icons">delete</i>
+      </button>
+    </span>
+  </div><!-- ./Email Item -->
