--- a/src/app/components/modules/caixa-de-entrada/caixa-de-entrada.component.html
+++ b/src/app/components/modules/caixa-de-entrada/caixa-de-entrada.component.html
@@ -4,12 +4,12 @@
   </cmail-header>
   <main class="mdl-layout__content">
     <div class="page-content">
-
       <div class="mdl-grid">
+        <cmail-emails-list [list]="emailList" (delete)="handleDeleteEmail($event)" style="width: 100%;"></cmail-emails-list>
         <!--<ul>
           <li *ngFor="let email of emailList">{{ email.content }}</li>
         </ul>-->
-        <cmail-emails-list [list]="emailList"></cmail-emails-list>
+        
         <!-- Floating Multiline Textfield -->
         <button class="globalFab tooltip btn mdl-button mdl-js-button mdl-button--fab mdl-button--colored"
           role="tooltip" aria-label="Criar novo email" (click)="toggleEmail()">
