--- a/src/app/components/modules/detalhe-email/detalhe-email.component.html
+++ b/src/app/components/modules/detalhe-email/detalhe-email.component.html
@@ -1,1 +1,5 @@
-<p>detalhe-email works!</p>
+<h1>{{email.to}}</h1>
+<h2>{{email.from}}</h2>
+<h3>{{email.subject}}</h3>
+<p>{{email.content}}</p>
+<caption>{{email.created_at}}</caption>
